# ignyx

./: .env.example  .gitignore  pyproject.toml
app/: __init__.py
app/db/: __init__.py
app/models/: user.py
app/routes/: health.py  token.py  user.py
app/schemas/: user.py
app/services/: jwt.py
app/settings/: __init__.py
development_tasks/: machine_ip.py
migrations/: README  env.py
migrations/versions/: 0ebf4bbf6139_create_users_table.py  96d6c42edab8_create_users_table.py  eecd6b7d7ad0_create_users_table.py
tests/: conftest.py  test_database.py  test_health.py  test_security.py  test_user.py
