[project]
name = "ignyx"
version = "0.1.0"
description = ""
authors = [{ name = "hidekimaesaka", email = "lucasmsk11@gmail.com" }]
requires-python = ">=3.14,<4.0"
dependencies = ["fastapi[standard] (>=0.135.3,<0.136.0)", "pydantic-settings (>=2.13.1,<3.0.0)", "sqlalchemy (>=2.0.49,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "typos (>=1.45.1,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]

# dependencies configuration

# Ruff
[tool.ruff]
line-length = 79                # PEP-8
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

# Pytest
[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

# Taskipy
[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev --entrypoint app:create_app'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
machine_ip = 'python development_tasks/machine_ip.py'
